--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,15 @@
-<app-nova-transferencia></app-nova-transferencia>
+<header>
+  <a routerLink="extrato">
+    Bytebank
+  </a>
+  <a routerLink="nova-transferencia" routerLinkActive="ativo">
+    Nova Transferência
+  </a>
+</header>
+<main>
+  <router-outlet></router-outlet>
+</main>
+
+<!-- <footer>
+ <a href="https://github.com/rodrigosotto/" target="_blank">By Jefferson R. Sotto - 2023</a>
+</footer> -->
