--- a/src/app/nova-transferencia/nova-transferencia.component.html
+++ b/src/app/nova-transferencia/nova-transferencia.component.html
@@ -1,10 +1,10 @@
 <section class="container">
-  <form class="formulario" (ngSubmit)="transferir()">
+  <form class="formulario" (ngSubmit)="onTransferir()">
     <h2 class="formulario__titulo">Nova Transferência</h2>
 
     <div class="form-field">
       <label class="form-field__label" for="valor">Valor</label>
-      <input class="form-field__input" id="valor" type="text" [(ngModel)]="valor" name="valor" />
+      <input class="form-field__input" id="valor" type="number" [(ngModel)]="valor" name="valor" />
     </div>
 
     <div class="form-field">
