--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,10 +8,13 @@
 
 * {
   font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
-  max-width: 400px;
+  max-width: 600px;
   padding: 30px;
   margin: 0 auto;
 }
